--- a/estilos.css
+++ b/estilos.css
@@ -48,6 +48,7 @@ a:hover{
 #barra_de_pesquisa{
     width: 450px;
     line-height: 30px;
+    border-radius: 3px;
 }
 #botoes {
     text-align: center;
